mci-ingress.yaml
#
#  Author: Hari Sekhon
#  Date: 2019-11-28 12:59:41 +0000 (Thu, 28 Nov 2019)
#
#  vim:ts=2:sts=2:sw=2:et
#
#  https://github.com/harisekhon/kubernetes-templates
#
#  License: see accompanying Hari Sekhon LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/HariSekhon
#

# Multi-Cluster Ingress on GKE

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: APP
  namespace: NAMESPACE
  annotations:
    kubernetes.io/ingress.class: gce-multi-cluster
    kubernetes.io/ingress.global-static-ip-name: kubemci-ip
spec:
  backend:
    serviceName: APP
    servicePort: 80
